Keyboard map added

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     </section>
 
     <!-- [3] CONNECTION INTRO -->
-    <section class="section bg-light-yellow">
+    <section class="section bg-periwinkle">
         <div class="split-layout">
             <div>
                 <h2 class="section-title">Building Paths</h2>
@@ -240,21 +240,144 @@
         </div>
     </section>
 
-    <!-- [3a] KEYBOARD MAPPING -->
-    <section class="section bg-linen">
+   <!-- [3a] KEYBOARD MAPPING -->
+    <section class="section bg-white">
         <div class="centered-layout">
-            <h3 style="font-size: 24px; font-weight: 600; margin-bottom: 40px;">Keyboard Mapping</h3>
-            <div class="wireframe-box large">
-                <strong>KEYBOARD DIAGRAM</strong><br><br>
-                Visual layout showing key-to-glyph mapping<br><br>
-                "To insert these characters in your text,<br>
-                select 'Tangent' font, size 20/20 point"
+            <div class="section-text">
+                <h3>How to Type</h3>
+                <p class="section-subtitle">
+                To insert these characters in your text, <br>select "Tangent Form" font, size 20/20pt
+                </p>
+            </div>
+            <div class="keyboard-container">
+                <!-- Row 1: Numbers -->
+                <div class="keyboard-row">
+                    <div class="key empty"><span class="key-label">~</span></div>
+                    <div class="key empty"><span class="key-label">1</span></div>
+                    <div class="key empty"><span class="key-label">2</span></div>
+                    <div class="key empty"><span class="key-label">3</span></div>
+                    <div class="key empty"><span class="key-label">4</span></div>
+                    <div class="key empty"><span class="key-label">5</span></div>
+                    <div class="key empty"><span class="key-label">6</span></div>
+                    <div class="key empty"><span class="key-label">7</span></div>
+                    <div class="key empty"><span class="key-label">8</span></div>
+                    <div class="key empty"><span class="key-label">9</span></div>
+                    <div class="key empty"><span class="key-label">0</span></div>
+                    <div class="key empty"><span class="key-label">-</span></div>
+                    <div class="key empty"><span class="key-label">=</span></div>
+                    <div class="key wide empty"><span class="key-label">Backspace</span></div>
+                </div>
+
+                <!-- Row 2: QWERTY -->
+                <div class="keyboard-row">
+                    <div class="key wide-tab empty"><span class="key-label">Tab</span></div>
+                    <div class="key has-glyph">
+                        <span class="key-label">Q</span>
+                        <span class="glyph">q</span>
+                    </div>
+                    <div class="key has-glyph">
+                        <span class="key-label">W</span>
+                        <span class="glyph">w</span>
+                    </div>
+                    <div class="key has-glyph">
+                        <span class="key-label">E</span>
+                        <span class="glyph">e</span>
+                    </div>
+                    <div class="key empty"><span class="key-label">R</span></div>
+                    <div class="key has-glyph">
+                        <span class="key-label">T</span>
+                        <span class="glyph">t</span>
+                    </div>
+                    <div class="key empty"><span class="key-label">Y</span></div>
+                    <div class="key has-glyph">
+                        <span class="key-label">U</span>
+                        <span class="glyph">u</span>
+                    </div>
+                    <div class="key has-glyph">
+                        <span class="key-label">I</span>
+                        <span class="glyph">i</span>
+                    </div>
+                    <div class="key has-glyph">
+                        <span class="key-label">O</span>
+                        <span class="glyph">o</span>
+                    </div>
+                    <div class="key empty"><span class="key-label">P</span></div>
+                    <div class="key empty"><span class="key-label">[</span></div>
+                    <div class="key empty"><span class="key-label">]</span></div>
+                    <div class="key empty"><span class="key-label">\</span></div>
+                </div>
+
+                <!-- Row 3: ASDF -->
+                <div class="keyboard-row">
+                    <div class="key wide-caps empty"><span class="key-label">Caps Lock</span></div>
+                    <div class="key has-glyph">
+                        <span class="key-label">A</span>
+                        <span class="glyph">a</span>
+                    </div>
+                    <div class="key has-glyph">
+                        <span class="key-label">S</span>
+                        <span class="glyph">s</span>
+                    </div>
+                    <div class="key has-glyph">
+                        <span class="key-label">D</span>
+                        <span class="glyph">d</span>
+                    </div>
+                    <div class="key empty"><span class="key-label">F</span></div>
+                    <div class="key has-glyph">
+                        <span class="key-label">G</span>
+                        <span class="glyph">g</span>
+                    </div>
+                    <div class="key empty"><span class="key-label">H</span></div>
+                    <div class="key has-glyph">
+                        <span class="key-label">J</span>
+                        <span class="glyph">j</span>
+                    </div>
+                    <div class="key has-glyph">
+                        <span class="key-label">K</span>
+                        <span class="glyph">k</span>
+                    </div>
+                    <div class="key has-glyph">
+                        <span class="key-label">L</span>
+                        <span class="glyph">l</span>
+                    </div>
+                    <div class="key empty"><span class="key-label">;</span></div>
+                    <div class="key empty"><span class="key-label">'</span></div>
+                    <div class="key wide-return empty"><span class="key-label">Return</span></div>
+                </div>
+
+                <!-- Row 4: ZXCV -->
+                <div class="keyboard-row">
+                    <div class="key wide-shift empty"><span class="key-label">Shift</span></div>
+                    <div class="key has-glyph">
+                        <span class="key-label">Z</span>
+                        <span class="glyph">z</span>
+                    </div>
+                    <div class="key has-glyph">
+                        <span class="key-label">X</span>
+                        <span class="glyph">x</span>
+                    </div>
+                    <div class="key has-glyph">
+                        <span class="key-label">C</span>
+                        <span class="glyph">c</span>
+                    </div>
+                    <div class="key empty"><span class="key-label">V</span></div>
+                    <div class="key has-glyph">
+                        <span class="key-label">B</span>
+                        <span class="glyph">b</span>
+                    </div>
+                    <div class="key empty"><span class="key-label">N</span></div>
+                    <div class="key empty"><span class="key-label">M</span></div>
+                    <div class="key empty"><span class="key-label">,</span></div>
+                    <div class="key empty"><span class="key-label">.</span></div>
+                    <div class="key empty"><span class="key-label">/</span></div>
+                    <div class="key wide-shift empty"><span class="key-label">Shift</span></div>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- [3b] PATTERN GLYPHSET -->
-    <section class="section full-height bg-light-yellow">
+    <!-- <section class="section full-height bg-light-yellow">
         <div class="wireframe-box full">
             <div style="font-size: 14px;">
                 <strong>COMPLETE PATTERN GLYPHSET</strong><br><br>
@@ -262,7 +385,7 @@
                 Organized by component type
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- [3c] LIVE TYPING -->
     <section class="section bg-light-yellow">
